[project]
name = "radalloy"
version = "0.1.0"
description = "RadAlloy: Radiation Damage Simulation for Alloys"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "dogusariturk", email = "dogu.sariturk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "hatchling>=1.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radalloy"]

[tool.hatch.build.targets.sdist]
include = ["src/radalloy"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
branch = true
source = [
    "src/radalloy"
]

[tool.coverage.report]
show_missing = true